<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>me.flyray.bsin</groupId>
        <artifactId>bsin-server-waas</artifactId>
        <version>3.0.0-SNAPSHOT</version>
    </parent>

    <artifactId>waas-infrastructure</artifactId>
    <version>3.0.0-SNAPSHOT</version>
    <name>waas-infrastructure</name>
    <packaging>jar</packaging>

    <description>bsin-paas平台：原子服务开发脚手架-业务服务模块</description>
    <properties>
        <java.version>11</java.version>
        <mybatis.starter.version>2.1.3</mybatis.starter.version>
        <mysql.version>8.0.25</mysql.version>
        <druid.starter>1.2.6</druid.starter>
    </properties>
    <dependencies>
        <!-- mybatis配置 -->
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-boot-starter</artifactId>
            <version>3.5.3.1</version>
        </dependency>

        <dependency>
            <groupId>me.flyray.bsin</groupId>
            <artifactId>bsin-common-utils</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>me.flyray.bsin</groupId>
            <artifactId>bsin-common-mq</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>me.flyray.bsin</groupId>
            <artifactId>bsin-common-oss</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>me.flyray.bsin</groupId>
            <artifactId>bsin-common-redis</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>me.flyray.bsin</groupId>
            <artifactId>waas-facade</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>me.flyray.bsin</groupId>
            <artifactId>waas-domain</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>me.flyray.bsin</groupId>
            <artifactId>bsin-common-blockchain</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>core</artifactId>
            <version>3.3.0</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>

        </plugins>
    </build>

</project>
